# physical-ai-book

./: .dockerignore  .gitignore  .npmignore  package-lock.json
.gemini/commands/: sp.analyze.toml
.github/workflows/: docusaurus.yml
.specify/scripts/powershell/: analyze-artifacts.ps1
backend/: .gitignore
backend/src/api/: chatbot.py  main.py
backend/src/services/: db.py  rag_agent.py  retrieval.py
db/migrations/: README.md
examples/gazebo_simulations/humanoid_world/: humanoid_with_sensors.world
examples/isaac_sim_projects/autonomous_nav/: README.md
examples/ros2_packages/humanoid_joint_controller/: CMakeLists.txt  package.xml
examples/ros2_packages/humanoid_joint_controller/src/: joint_publisher_node.py
examples/whisper_llm_actions/vla_capstone/: README.md
frontend/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/docs/: glossary.mdx  intro.md
frontend/docs/appendices/: cloud_guide.mdx  hardware_guide.mdx  references.md
frontend/docs/module1/: python_rclpy_control.mdx  ros2_overview.mdx  urdf_humanoids.mdx
frontend/docs/module2/: gazebo_physics.mdx  sensor_simulation.mdx  unity_visualization.mdx
frontend/docs/module3/: isaac_ros_perception.mdx  isaac_sim_synthetic_data.mdx  path_planning.mdx
frontend/docs/module4/: llm_cognitive_planning.mdx  multi_modal_actions.mdx  whisper_integration.mdx
frontend/src/components/: ChatbotWidget.module.css  ChatbotWidget.tsx
frontend/src/css/: custom.css
frontend/src/pages/: index.tsx
frontend/src/services/: text_selection.ts
history/prompts/001-user-auth/: 5-feature-specification-for-user-authentication-created.spec.prompt.md
qdrant/setup_scripts/: README.md  setup.py
specs/2-physical-ai-rag-book/: plan.md  spec.md  tasks.md
specs/2-physical-ai-rag-book/checklists/: requirements.md
(+26 files in other folders)
